# CPP_Babel_2020

./: .gitignore  CMakeLists.txt  README.md  binary_protocol.txt  conanfile.txt  setup-conan
client/include/: AUser.hpp  Call.hpp  CustomMainWindow.hpp  User.hpp  UserPage.hpp
client/include/Audio/: Audio.hpp  AudioIO.hpp  Call.hpp  Encode.hpp  IAudio.hpp  IEncode.hpp  PortAudio.hpp
client/include/Graphic/: AUser.hpp  ConnectionPage.hpp  CustomMainWindow.hpp  User.hpp  UserPage.hpp  enum.hpp
client/include/NetworkTCP/: ClientTcp.hpp  IClientTcp.hpp
client/include/NetworkUDP/: INetworkUDP.hpp  NetworkUDP.hpp  ReceiverUDP.hpp  SenderUDP.hpp
client/src/: Call.cpp  ConnectionPage.cpp  CustomMainWindow.cpp  CustomWidget.cpp  User.cpp  UserPage.cpp  main.cpp
client/src/Audio/: Audio.cpp  AudioIO.cpp  Call.cpp  Encode.cpp  PortAudio.cpp
client/src/Graphic/: ConnectionPage.cpp  CustomButton.cpp  CustomLineEdit.cpp  CustomMainWindow.cpp  CustomText.cpp  CustomWidget.cpp  User.cpp  UserPage.cpp
client/src/NetworkTCP/: ClientTcp.cpp
client/src/NetworkUDP/: NetworkUDP.cpp  ReceiverUDP.cpp  SenderUDP.cpp
doc/: Doxyfile
include/: BabelException.hpp  Call.hpp  ConnectionPage.hpp  CustomButton.hpp  CustomLineEdit.hpp  CustomMainWindow.hpp  CustomText.hpp  CustomWidget.hpp  IEncode.hpp  INetwork.hpp  Opus.hpp  PortAudio.hpp  QT.hpp  QTMainWindow.hpp  Server.hpp  User.hpp  UserPage.hpp  Users.hpp  enum.hpp  myUDP.hpp
include/Audio/: Audio.hpp  IAudio.hpp  IEncode.hpp  Opus.hpp  PortAudio.hpp
include/Network/: ClientUDP.hpp  INetwork.hpp  NetworkUDP.hpp  ReceiverUDP.hpp  SenderUDP.hpp  ServerUDP.hpp
include/NetworkTCP/: Communication.hpp  Logger.hpp  NetworkTCP.hpp
include/NetworkTCP/client/: ClientTcp.hpp
include/NetworkTCP/server/: CallBacks.hpp  InstanceClientTCP.hpp  ServerTCP.hpp
include/NetworkUDP/: INetworkUDP.hpp  NetworkUDP.hpp  ReceiverUDP.hpp  SenderUDP.hpp
server/include/: ADatabase.hpp  Database.hpp  Server.hpp
server/include/NetworkTCP/: ClientTcp.hpp  IInstanceClientTCP.hpp  IServerTcp.hpp  InstanceClientTCP.hpp  ServerTCP.hpp
server/src/: Server.cpp  main.cpp
server/src/NetworkTCP/: ClientTcp.cpp  InstanceClientTCP.cpp  ServerTCP.cpp
shared/include/: ADatabase.hpp  BabelException.hpp  Communication.hpp  Database.hpp  Users.hpp
shared/src/: ADatabase.cpp  Database.cpp  Users.cpp
src/: Call.cpp  ConnectionPage.cpp  CustomButton.cpp  CustomLineEdit.cpp  CustomMainWindow.cpp  CustomText.cpp  CustomWidget.cpp  Opus.cpp  PortAudio.cpp  QT.cpp  QTMainWindow.cpp  Server.cpp  User.cpp  UserPage.cpp  Users.cpp  main.cpp  myUDP.cpp
src/Audio/: Audio.cpp  Opus.cpp  PortAudio.cpp
src/Network/: ClientUDP.cpp  NetworkUDP.cpp  ServerUDP.cpp
src/NetworkTCP/client/: ClientTcp.cpp
src/NetworkTCP/server/: InstanceClientTCP.cpp  ServerTCP.cpp
src/NetworkUDP/: NetworkUDP.cpp  ReceiverUDP.cpp  SenderUDP.cpp
styles/: styles.qss
